Tracking code added to the html email template

--- a/ga_mail/templates/email_template.html
+++ b/ga_mail/templates/email_template.html
@@ -12,22 +12,13 @@
       gtag('config', 'UA-228876180-1');
     </script>
 
-
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <p>Hello world!</p>
+    <p>This is the test email</p>
+    <a href="https://ga-mail-track.herokuapp.com/?utm_source=newsletter_2&utm_medium=email&utm_campaign=test_email2&utm_id=test_email">Refferal link</a>
     <br>
-    <form method="post"">
-      {% csrf_token %}
-      <input id="recipient_email" type="email" name="recipient_email_address">
-      <button type="submit">Submit</button>
-    </form>
-
-    </form>
-
-
-
+    <img src=”https://www.google-analytics.com/collect?v=1&tid=UA-228876180-1&cid=555&t=event&ec=emails&ea=open”>
 </body>
 </html>
