--- a/ga_mail/templates/base.html
+++ b/ga_mail/templates/base.html
@@ -19,7 +19,7 @@
 <body>
     <p>Hello world!</p>
     <br>
-    <form method="post"">
+    <form method="post">
       {% csrf_token %}
       <input id="recipient_email" type="email" name="recipient_email_address">
       <button type="submit">Submit</button>
